    -Fixed several false alarms
    -New rule that checks for sentences without a verb (turned off by default due to
     the risk of false alarms)
    -New rule that checks if a weekday matches a date, e.g. detects
     "Dienstag, 29.9.2014", as that date isn't a Tuesday.
    -Performance improvements for spell check suggestions
    
-Portuguese:
    -added/improved several rules
    -added many dozens of compound words

-Russian:
    -added new rules    
    -fix SourceForge feature request #38 (check for different quotation marks)

-Polish:
    -added and improved some rules
     
-Spanish:
    -Added new POS category Z (for spelled numbers, e.g. 'uno', 'dos', ...)
    -Spelled numbers can now be detected and managed both in disambiguation and rules.
    -Fixed some incorrect lemmas in POS dictionary.
    -Added Hybrid chunker-disambiguator.

-Tamil:
    -Added initial support for Tamil. If the font for Tamil is not properly
     displayed on your computer and you're using Windows, you might need
     to apply the work around described here:
     https://bugs.openjdk.java.net/browse/JDK-8008572


-API:
    -Removed several classes and methods that had been deprecated since version 2.6
    -The signature of Language.getRelevantRules() has changed
    -WhitespaceRule has been renamed to MultipleWhitespaceRule (WhitespaceRule
     still exists but has been deprecated)
    -Deprecated some methods whose visibility will be decreased (e.g. from public
     to protected)
    -MorfologikSpellerRule.getRuleMatch(String, int) has been renamed to
     MorfologikSpellerRule.getRuleMatches(String, int)
    -The RuleMatch constructor now throws an exception if toPosition is not
     larger than fromPosition
    -The JLanguageTool and MultiThreadedJLanguageTool constructors don't declare to
     throw an IOException anymore

-Command line:
    -Enabling and disabling specific rules at the same time is now allowed.