@@ -46,6 +46,8 @@ LanguageTool Change Log
     -New rule that checks if a weekday matches a date, e.g. detects
      "Dienstag, 29.9.2014", as that date isn't a Tuesday.
     -Performance improvements for spell check suggestions
+    -Performance improvements for the multi-thread use case, where JLanguageTool
+     gets created per thread, but German gets created only once
     
 -Portuguese:
     -added/improved several rules
